<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Top Toolbar Header -->
    <View
        android:id="@+id/top_log_view"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/card_surface"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/log_view_label_log_output"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintStart_toStartOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/content_log_toggle_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/bg_craze_toggle"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        android:textOff="@string/log_view_button_scroll_off"
        android:textOn="@string/log_view_button_scroll_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_log"
        app:layout_constraintTop_toTopOf="parent"/>

    <ToggleButton
        android:id="@+id/content_log_toggle_log"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/bg_craze_toggle"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        android:textOff="@string/log_view_button_output_off"
        android:textOn="@string/log_view_button_output_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/log_view_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/log_view_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_craze_edit_btn"
        android:scaleType="centerInside"
        android:src="@drawable/ic_craze_close"
        app:tint="@color/primary_text"
        android:contentDescription="Close"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Terminal Output View -->
    <com.kdt.DefocusableScrollView
        android:id="@+id/content_log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#070A11"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_log_view">

        <TextView
            android:id="@+id/content_log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#D1D5DB"
            android:textSize="12sp"
            android:lineSpacingExtra="2dp"
            android:textIsSelectable="true"/>

    </com.kdt.DefocusableScrollView>

</merge>
