<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_heavy"
    android:paddingBottom="@dimen/padding_large"
    android:paddingTop="@dimen/padding_heavy"
    >

    <!-- Version filter -->
    <TextView
        android:id="@+id/search_mod_mc_version_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profiles_profile_version"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/search_mod_selected_mc_version_textview"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_craze_input"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/text_tertiary"
        android:hint="@string/version_select_hint"
        android:paddingHorizontal="14dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/search_mod_mc_version_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_mod_mc_version_textview" />

    <Button
        android:id="@+id/search_mod_mc_version_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_craze_edit_btn"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/global_select"
        app:layout_constraintBottom_toBottomOf="@+id/search_mod_selected_mc_version_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_mod_selected_mc_version_textview" />

    <!-- Apply -->
    <com.kdt.mcgui.MineButton
        android:id="@+id/search_mod_apply_filters"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/generic_apply"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_mod_selected_mc_version_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>